--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "fibers": "^5.0.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1"
   }
 }
