--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpackboilerplate",
+  "name": "webpack-react-template",
   "version": "1.0.0",
   "description": "",
   "main": "script-compiled.js",
